--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* changed font color to white */
 .nav-link {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -13,14 +12,10 @@ body {
 }
 .container {
     background-color: seagreen;
-    /* padding: 300x; */
     margin: 60px;  
     
 }
 
-/* .navbar-brand {
-    background-color: seagreen;
-} */
 h1 {
     margin-left: 20px;
     padding: 15px 10px;
@@ -46,25 +41,39 @@ h2 {
 .img {
     float: left;
     width: 200px;
+    margin-right: 30px;
 }
+
 
 footer {
     background-color: #343a40;
     width: 100%;
+    bottom: 0;
     position: fixed;
-    border: 15px;
+    text-align: center;
+    color: white;
+    padding: 5px;
+    
+    
 }
 
 @media screen and (min-width: 980px) {
   .container {
-      max-width: 750px;
+      max-width: 700px;
+
   }
 }
 
 @media screen and (max-width: 768px) {
-    
+    .container {
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 640px) {
-    
-}
+    .col-md-4 {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+      }
